[status] Fix bottom-page white space in dark mode.
[status] Make commit dialog easy to click

--- a/status/modules/styles.scss
+++ b/status/modules/styles.scss
@@ -6,7 +6,7 @@ html {
   color: var(--on-background);
   fill: var(--on-background);
   min-width: fit-content;
-  min-height: fit-content;
+  min-height: 100vh;
 }
 
 .bg-success {
